	  eventually there will be too many to reasonably check for.  
  nano_small_msg(), nano_disabled_msg()
	- Added checks for disabled functions to see whether or not to
	  declare them.
  do_next_word()
	- Update the previous line as well as the current one in case we
	  have moved beyond COLS or back from COLS, patch submitted
	  by Ryan Krebs.
- search.c:
  do_replace_hilight()
	- New function, displays the currently selected word as hilighted
	  in the spell check.  Called from do_replace_loop (Rocco Corsi).
	- Added calls to curs_set(0) and (1) to diable the cursor when
	  hilighting, looks much better.
- es.po: 
	- Traditional Spanish strings updates.

nano 0.9.21 - 11/23/2000
- AUTHORS
	- Added Rocco Corsi.
- nano.c:
  main()
	- Changed check for argc == 1 to argv[optind] == NULL to decide
	  whether or not to display "New File" in the statusbar.
- search.c:
  findnextstr()
	- Fix curent_x increment bug by using another variable (Rocco Corsi).
  search_init()
	- Silly typo in our "one simple call" of statusq.  Stopped
	  previous search string from being displayed.
  do_replace()
	- Copy back the previous value of last_replace into answer if
	  using PICO_MODE and answer == ""
- winio.c:
  do_up()
	- Deleted first update_line() call, screws up display when marker is set.
- nano.1, nano.1.html
	- Updated man page for new -p definition.

nano 0.9.20 - 11/18/2000
- General
	- Ran source through indent -kr again.  Make everything pretty.
	- Changed behavior of "search" and "replace" prompts to make all
  	  previous values editable.  This change was made so that you can 
	  replace with the null string without needing a special key for it.  
	  changed code in search_init(), do_replace(), nanogetstr (see
	  below).
	- Added some missing gettext calls here and there (Jordi).
	- Revamped nanogetsr() and calls to it to use variable length strings.
	  MANY changes in nanogetstr(), many chances in search.c, new